--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,7 @@
-yooo
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
